@@ -25,14 +25,13 @@
 
 #include "ApplicationFeatures/ApplicationServer.h"
 #include "Basics/FileUtils.h"
-#include "Basics/StringUtils.h"
-#include "Basics/VelocyPackHelper.h"
 #include "Logger/LogMacros.h"
 #include "Logger/Logger.h"
 #include "Logger/LoggerStream.h"
 #include "ProgramOptions/ProgramOptions.h"
 
 #include <velocypack/Dumper.h>
+#include <velocypack/HexDump.h>
 #include <velocypack/Options.h>
 #include <velocypack/Sink.h>
 #include <velocypack/Slice.h>
@@ -40,6 +39,7 @@
 #include <velocypack/velocypack-aliases.h>
 
 #include <iostream>
+#include <unordered_set>
 
 using namespace arangodb;
 using namespace arangodb::basics;
@@ -118,22 +118,23 @@ struct CustomTypeHandler : public VPackCustomTypeHandler {
 VPackFeature::VPackFeature(application_features::ApplicationServer& server, int* result)
     : ApplicationFeature(server, "VPack"),
       _result(result),
-      _prettyPrint(true),
-      _jsonInput(false),
-      _hexInput(false),
-      _printNonJson(true) {
+      _inputType("vpack"),
+      _outputType("json-pretty"),
+      _failOnNonJson(true) {
   requiresElevatedPrivileges(false);
   setOptional(false);
 }
 
 void VPackFeature::collectOptions(std::shared_ptr<options::ProgramOptions> options) {
+  std::unordered_set<std::string> const inputTypes{{"json", "json-hex", "vpack", "vpack-hex" }};
+  std::unordered_set<std::string> const outputTypes{{"json", "json-pretty", "vpack", "vpack-hex" }};
+
   options->addOption("--input-file", "input filename", new StringParameter(&_inputFile));
   options->addOption("--output-file", "output filename", new StringParameter(&_outputFile));
-  options->addOption("--pretty", "pretty print result", new BooleanParameter(&_prettyPrint));
-  options->addOption("--hex", "read hex-encoded input", new BooleanParameter(&_hexInput));
-  options->addOption("--json", "treat input as JSON", new BooleanParameter(&_jsonInput));
-  options->addOption("--print-non-json", "print non-JSON types",
-                     new BooleanParameter(&_printNonJson));
+  options->addOption("--input-type", "type of input", new DiscreteValuesParameter<StringParameter>(&_inputType, inputTypes));
+  options->addOption("--output-type", "type of output", new DiscreteValuesParameter<StringParameter>(&_outputType, outputTypes));
+  options->addOption("--fail-on-non-json", "fail when trying to emit non-JSON types to JSON output",
+                     new BooleanParameter(&_failOnNonJson));
 }
 
 void VPackFeature::start() {
@@ -153,26 +154,24 @@ void VPackFeature::start() {
   }
 #endif
 
-  std::string s = basics::FileUtils::slurp(_inputFile);
+  // read ipnut
+  std::string input = basics::FileUtils::slurp(_inputFile);
 
-  if (_hexInput) {
-    s = ::convertFromHex(s);
+  bool const inputIsJson = (_inputType == "json" || _inputType == "json-hex" || _inputType == "json-pretty");
+  bool const inputIsHex = (_inputType == "json-hex" || _inputType == "vpack-hex");
+  if (inputIsHex) {
+    input = ::convertFromHex(input);
   }
 
   ::CustomTypeHandler customTypeHandler;
 
-  VPackOptions options;
-  options.prettyPrint = _prettyPrint;
-  options.unsupportedTypeBehavior =
-      (_printNonJson ? VPackOptions::ConvertUnsupportedType : VPackOptions::FailOnUnsupportedType);
-  options.customTypeHandler = &customTypeHandler;
-
   VPackSlice slice;
   std::shared_ptr<VPackBuilder> builder;
 
-  if (_jsonInput) {
+  if (inputIsJson) {
+    // JSON input
     try {
-      builder = VPackParser::fromJson(s);
+      builder = VPackParser::fromJson(input);
       slice = builder->slice();
     } catch (std::exception const& ex) {
       LOG_TOPIC("d654d", ERR, Logger::FIXME)
@@ -182,9 +181,10 @@ void VPackFeature::start() {
       return;
     }
   } else {
+    // vpack input
     try {
-      VPackValidator validator(&options);
-      validator.validate(s.c_str(), s.size(), false);
+      VPackValidator validator;
+      validator.validate(input.data(), input.size(), false);
     } catch (std::exception const& ex) {
       LOG_TOPIC("4c05d", ERR, Logger::FIXME)
           << "invalid VPack input while processing infile '" << _inputFile
@@ -193,29 +193,11 @@ void VPackFeature::start() {
       return;
     }
 
-    slice = VPackSlice(reinterpret_cast<uint8_t const*>(s.data()));
+    slice = VPackSlice(reinterpret_cast<uint8_t const*>(input.data()));
   }
 
-  VPackBuffer<char> buffer(4096);
-  VPackCharBufferSink sink(&buffer);
-  VPackDumper dumper(&sink, &options);
-
-  try {
-    dumper.dump(slice);
-  } catch (std::exception const& ex) {
-    LOG_TOPIC("ed2fb", ERR, Logger::FIXME)
-        << "caught exception while processing infile '" << _inputFile
-        << "': " << ex.what();
-    *_result = EXIT_FAILURE;
-    return;
-  } catch (...) {
-    LOG_TOPIC("29ad4", ERR, Logger::FIXME)
-        << "caught unknown exception occurred while processing infile '"
-        << _inputFile << "'";
-    *_result = EXIT_FAILURE;
-    return;
-  }
-
+  
+  // produce output
   std::ofstream ofs(_outputFile, std::ofstream::out);
 
   if (!ofs.is_open()) {
@@ -230,17 +212,49 @@ void VPackFeature::start() {
     ofs.seekp(0);
   }
 
-  // write into stream
-  char const* start = buffer.data();
-  ofs.write(start, buffer.size());
+  bool const outputIsJson = (_outputType == "json" || _outputType == "json-hex" || _outputType == "json-pretty");
+  bool const outputIsHex = (_outputType == "vpack-hex");
+  if (outputIsJson) {
+    // JSON output
+    VPackOptions options;
+    options.prettyPrint = (_outputType == "json-pretty");
+    options.unsupportedTypeBehavior =
+        (_failOnNonJson ? VPackOptions::ConvertUnsupportedType : VPackOptions::FailOnUnsupportedType);
+    options.customTypeHandler = &customTypeHandler;
+  
+    arangodb::velocypack::OutputFileStreamSink sink(&ofs);
+    VPackDumper dumper(&sink, &options);
+
+    try {
+      dumper.dump(slice);
+    } catch (std::exception const& ex) {
+      LOG_TOPIC("ed2fb", ERR, Logger::FIXME)
+          << "caught exception while processing infile '" << _inputFile
+          << "': " << ex.what();
+      *_result = EXIT_FAILURE;
+      return;
+    } catch (...) {
+      LOG_TOPIC("29ad4", ERR, Logger::FIXME)
+          << "caught unknown exception occurred while processing infile '"
+          << _inputFile << "'";
+      *_result = EXIT_FAILURE;
+      return;
+    }
+  } else if (outputIsHex) {
+    // vpack hex output
+    ofs << VPackHexDump(slice);
+  } else {
+    // vpack output
+    char const* start = slice.startAs<char const>();
+    ofs.write(start, slice.byteSize());
+  }
+
   ofs.close();
 
   // cppcheck-suppress *
   if (!toStdOut) {
     LOG_TOPIC("0a90f", INFO, Logger::FIXME)
         << "successfully processed infile '" << _inputFile << "'";
-    LOG_TOPIC("1f88b", INFO, Logger::FIXME) << "infile size: " << s.size();
-    LOG_TOPIC("7c311", INFO, Logger::FIXME) << "outfile size: " << buffer.size();
   }
 
   *_result = EXIT_SUCCESS;
